include/cassette/cstr.h


typedef struct cstr cstr;
extern cstr cstr_placeholder_instance;
cstr *
cstr_clone(const cstr *str)
CSTR_NONNULL_RETURN
CSTR_NONNULL(1);
cstr *
cstr_create(void)
CSTR_NONNULL_RETURN;
void
cstr_destroy(cstr *str)
CSTR_NONNULL(1);
void
cstr_clear(cstr *str)
CSTR_NONNULL(1);
void
cstr_cut(cstr *str, size_t offset, size_t length)
CSTR_NONNULL(1);
void
cstr_insert_cstr(cstr *str, const cstr *str_src, size_t offset)
CSTR_NONNULL(1, 2);
void
cstr_insert_double(cstr *str, double d, size_t offset)
CSTR_NONNULL(1);
void
cstr_insert_long(cstr *str, long long l, size_t offset)
CSTR_NONNULL(1);
void
cstr_insert_raw(cstr *str, const char *raw_str, size_t offset)
CSTR_NONNULL(1, 2);
void
cstr_pad(cstr *str, const char *pattern, size_t offset, size_t length_target)
CSTR_NONNULL(1, 2);
void
cstr_prealloc(cstr *str, size_t byte_length)
CSTR_NONNULL(1);
void
cstr_repair(cstr *str)
CSTR_NONNULL(1);
void
cstr_set_precision(cstr *str, int precision)
CSTR_NONNULL(1);
void
cstr_set_tab_width(cstr *str, size_t width)
CSTR_NONNULL(1);
void
cstr_slice(cstr *str, size_t offset, size_t length)
CSTR_NONNULL(1);
void
cstr_trim(cstr *str)
CSTR_NONNULL(1);
void
cstr_wrap(cstr *str, size_t max_width)
CSTR_NONNULL(1);
void
cstr_zero(cstr *str)
CSTR_NONNULL(1);
size_t
cstr_byte_length(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;
size_t
cstr_byte_offset(const cstr *str, size_t offset)
CSTR_NONNULL(1)
CSTR_PURE;
const char *
cstr_chars(const cstr *str)
CSTR_NONNULL_RETURN
CSTR_NONNULL(1)
CSTR_PURE;
const char *
cstr_chars_at_coords(const cstr *str, size_t row, size_t col)
CSTR_NONNULL_RETURN
CSTR_NONNULL(1)
CSTR_PURE;
const char *
cstr_chars_at_offset(const cstr *str, size_t offset)
CSTR_NONNULL_RETURN
CSTR_NONNULL(1)
CSTR_PURE;
size_t
cstr_coords_offset(const cstr *str, size_t row, size_t col)
CSTR_NONNULL(1)
CSTR_PURE;
enum cerr
cstr_error(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;
size_t
cstr_height(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;
size_t
cstr_length(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;
size_t
cstr_test_wrap(const cstr *str, size_t max_width)
CSTR_NONNULL(1)
CSTR_PURE;
size_t
cstr_unwrapped_offset(const cstr *str, const cstr *str_wrap, size_t offset)
CSTR_NONNULL(1, 2)
CSTR_PURE;
size_t
cstr_width(const cstr *str)
CSTR_NONNULL(1)
CSTR_PURE;